 * User interface:
   * Allow copying the selection in the old (default) lobby using
     Ctrl+C/Command+C (bug #5877)
   * Color coded the resistance table in the hp display's tooltip.
   * Tooltip for the movement points display shows the movement costs.
   * Updating the shroud after delaying shroud updates is done gradually instead
     of instantly.
 * WML engine:
   * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
     error message if the image= key is missing
   * When not replacing values, [effect] apply_to=defense will now modify
     absolute values instead of signed values (bug #20242). This allows for
     cleaner WML when the unit type is not necessarily known in advance.
   * Split the 'not_living' unit status into 'unpoisonable', 'undrainable' and
     'unplagueable'. 'not_living' now acts on the whole group
   * The bugs with sighted events have been resolved.
   * A unit's maximum hit points are more regularly applied. This affects
     [transform_unit], [effect]apply_to=type, and [effect]apply_to=variation.
   * Poison is automatically removed from immune units after using
     [effect]apply_to=type or [effect]apply_to=variation.
   * Fixed bug #20401: [remove_unit_overlay] did not work when the image used an
     image path function that took multiple parameters.
   * Improved support for setting id= within a [variation].
  * Added support for square bracket expansion in animation strings I.E
    halo="pic[1-2,5]:[10,20,30]" expands to halo="pic1:10,pic2:20,pic5:30"
    this is used for halos, team flags, animated terrains and unit animations
  * Changed default unit halos and macros to use new square bracket expansion
  * Fixed bug #20468: Update the owned villages when using [replace_map].
 Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it